--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "node index"
+    "serve": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,7 +13,8 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "mongoose": "^4.5.8",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "nodemon": "^1.10.0"
   },
   "devDependencies": {
     "eslint": "^3.2.0",
