--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "jwt-simple": "^0.5.0",
     "mongoose": "^4.5.8",
     "morgan": "^1.7.0",
-    "nodemon": "^1.10.0"
+    "nodemon": "^1.10.0",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.1.0"
   },
   "devDependencies": {
     "eslint": "^3.2.0",
