--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "morgan": "^1.7.0",
     "nodemon": "^1.10.0",
     "passport": "^0.3.2",
-    "passport-jwt": "^2.1.0"
+    "passport-jwt": "^2.1.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^3.2.0",
